--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700&display=swap"
     rel="stylesheet">
-  <title>💸 Granna 💸</title>
+  <title>Granna</title>
 </head>
 
 <body>
